[package]
name = "coliseum-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "*"
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.81"