[package]
name = "coliseum_net"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
sha256 = "1.5.0"
serde_json = "*"
serde = { version = "1.0.197", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

[[bin]]
name="client"
src="client.rs"

[[bin]]
name="server"
src="server.rs"


[lib]
name="lib"
src="lib.rs"