[package]
name = "coliseum"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "*"
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4"

[[bin]]
name="client"
src="client.rs"

[[bin]]
name="server"
src="server.rs"


[lib]
name="lib"
src="lib.rs"